[package]
name = "actix_codigos_postales_mexico"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-http = {version = "3.2.2", features = ["flate2","zstd"]}
actix-web = {version = "^4.2.1"}
#actix-web = {version = "4.2.1", optional = false, default-features = false, features = ["actix-macros","actix-web-codegen","cookie"] }
serde = { version = "^1.0.104", features = ["derive"] }
serde_json = {version = "^1.0.48"}
lazy_static = {version = "^1.4.0"}
